--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
           <button onclick="appendValue('0')">0</button>
         </div>
       </div>
-
-
+        <script src="script.js"></script>
   </body>
 </html>
 
